syntax="proto3";

//import "google/api/annotations.proto";
package protobuf;

service UserService {
  rpc GetListUsers(EmptyRequest) returns (GetListUserResponse){
//    option(google.api.http) = {
//      get: "/users/all",
//    };
  }
  rpc AddUser(User) returns (AddUserResponse);
}

message EmptyRequest {}

message GetListUserResponse {
  repeated User user= 1;
}

message User {
  string Name = 1;
  int64 Age = 2;
}

message AddUserResponse {
  string Message = 1;
}